# ngs

./: .coverage  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  EXECUTION_GUIDE.md  LICENSE  PROJECT_OVERVIEW.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: tests.yml
config/: config.yaml  samples.tsv
data/raw_data/: README.md
data/reference/: README.md
data/trimmed/: README.md
docs/: PUBLICATION_UPGRADE.md  TROUBLESHOOTING.md  TUTORIAL.md
results/aligned/: README.md
results/annotated/: README.md
results/fastqc/: README.md
results/reports/: README.md
results/variants/: README.md
scripts/: generate_report.py  parse_vcf.py  validate_data.py
src/ngs/: __init__.py
src/ngs/parsers/: __init__.py  vcf.py
src/ngs/report/: __init__.py  html.py
tests/: __init__.py  test_generate_report.py  test_parse_vcf.py
