[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ngs-pipeline"
version = "1.0.0"
description = "Production-ready NGS WGS variant-calling pipeline"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Adarsh Dheeraj Dubey", email = "adarshii@users.noreply.github.com" }
]
keywords = [
    "bioinformatics", "NGS", "WGS", "variant-calling",
    "genomics", "GATK", "snakemake"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pysam>=0.22.0",
    "biopython>=1.83",
    "jinja2>=3.1.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "pyyaml>=6.0.0",
    "snakemake>=8.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "flake8>=6.1.0",
    "black>=23.7.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/adarshii/ngs"
Repository = "https://github.com/adarshii/ngs"
Issues = "https://github.com/adarshii/ngs/issues"

[project.scripts]
ngs-parse-vcf = "ngs.parsers.vcf:main"
ngs-report = "ngs.report.html:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/ngs --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
